Changes for 1.0beta11:

 - fixed autoconf problems under SUSE 8.2 (Alexei)
 - housekeeping to delete hosts having status 'deleted' (Alexei)
 - AC_FUNC_GETLOADAVG changes to AC_REPLACE_FUNCS(getloadavg) in
 configure.in (Alexei)
 - eliminated compiler's warnings under SUSE 8.2 (Alexei)
 - added src/zabbix_sucker/housekeeper.* (Alexei)
 - new hos status: 'deleted' (Alexei)

Changes for 1.0beta10:

 - removed script misc/pinger/ (Alexei)
 - support if simple check 'icmpping' (Alexei)
 - new zabbix_suckerd's parameter: PingerFrequency (Alexei)
 - new zabbix_suckerd's parameter: FpingLocation (Alexei)
 - improvements for action form (Alexei)
 - support of system maps for screens (Alexei)
 - removed column graphid from table screens_items (Alexei)
 - added columns resource and resourceid to table screens_items
 (Alexei)
 - non breakable space in PHP forms (Alexei)
 - new draw type for graphs: Dot (Alexei)
 - improved media maintenance form (Alexei)
 - added sort order for custom graphs (Alexei)
 - added column graphs_items.sortorder (Alexei)
 - fixed problem when adding host from template and function 'str' 
 is used. Thanks to Jean-Baptiste Mariotte. (Alexei)
 - support of proc_cnt[*] under Solaris. Thanks to Marc Ledent (Alexei)
 - fixed sysinfo() result. Multiplication to mem_unit required (Alexei)
 - better reporting in case of different startup errors (Alexei)
 - added include/pid.c and include/pid.h (Alexei)
 - PostreSQL related fixes (Alexei)
 - added src/zabbix_snmptrap (Alexei)
 - fixed support of user-defined height of graphs (Alexei)
 - added frontends/include.classes.inc.php (Alexei)
 - show selected host in Host Add form (Alexei)
 - fixed snmptrap.sh (Alexei)
 - improved performance of simple graphs (Alexei)
 - minor fixes to eliminate compiler's warnings (Alexei)
 - fix to show HTML characters of string items in Latest Values and
 History  (Alexei)
 - added disk statistics to data.sql (Alexei)
 - popup confirmation screen for deletes and updates (Alexei)