@@ -61,6 +61,7 @@
 #define ITEM_STATUS_DISABLED	1
 /*#define ITEM_STATUS_TRAPPED	2*/
 #define ITEM_STATUS_NOTSUPPORTED	3
+#define ITEM_STATUS_DELETED	4
 
 /* Host statuses */
 #define HOST_STATUS_MONITORED	0
